# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter  linter.yaml  linter.yml
formatter_diff/: __init__.py  formatter_json.py  formatter_plain.py  formatter_stylish.py  json.py  plain.py  stylish.py
gendiff/: __init__.py  cli.py  difference.py  file_parser.py  generate_difference.py  parser.py  parser_gendiff.py  parsing.py  processing_diff.py
gendiff/formatter_diff/: __init__.py  formatter_json.py  formatter_plain.py  formatter_stylish.py
gendiff/formatters/: __init__.py  format_diff.py  formatter_json.py  formatter_plain.py  json.py  plain.py  stylish.py
gendiff/processing_diff/: apy_diff.py  formation_diff.py  processing.py
gendiff/scripts/: gen_diff.py  gendiff.py
tests/: test_all.py  test_difference.py
tests/fixtures/: fileA.json  fileB.json  result  result_json.json
