[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Николай Ануфриев <sch-nikolaj@yandex.ru>"]
repository = "https://github.com/sch0nik/python-project-lvl1"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
