[tool.poetry]
name = "hexlet-code"
version = "0.1.2"
description = ""
authors = ["Николай Ануфриев <sch-nikolaj@yandex.ru>"]
repository = "https://github.com/sch0nik/python-project-lvl1"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gen-diff = "gendiff.scripts.gen_diff:main"
