[tool.poetry]
name = "hexlet-code"
version = "0.5.1"
description = ""
authors = ["Николай Ануфриев <sch-nikolaj@yandex.ru>"]
repository = "https://github.com/sch0nik/python-project-lvl1"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pytest = "^6.2.3"
coverage = "^5.5"
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gen_diff:main"
